# ceml

./: CMakeLists.txt  ReadMe.md  main.cpp
include/ceml/: operations.hpp  tensor.hpp
